# vcpkg-hello

./: .gitignore  CMakeLists.txt  README.md  build.ps1  vcpkg.json
slides/: vcpkg-hello.md
src/: CMakeLists.txt  main.cpp
